Wed Apr 5 16:32:07 1995 Keith Vetter (keithv@fusion.com)

	* get_krbh.c: better error handling--old return values were 
           being overwritten.
        * locate_kdc.c: added new error code KRB5_REALM_CANT_RESOLVE for
           when we have realm names but can't find their addresses.
           Also, fixed up indenting of an if clause.
        * sendto_kdc.c: added winsock init/destroy calls because some
            PC tcp/ip stacks seem to need it.

Fri Mar 31 16:30:03 1995  Theodore Y. Ts'o  (tytso@dcl)

	* realm_dom.c (krb5_get_realm_domain): Don't indent #ifdef's!

	* hst_realm.c (krb5_get_host_realm): Don't indent #ifdef's!

Thu Mar 30 15:54:54 1995 Keith Vetter (keithv@fusion.com)

	* localaddr.c: in Windows/Mac code, fixed bug due to wrong level
           of indirection on memcpy call.

Tue Mar 28 19:22:28 1995 Keith Vetter (keithv@fusion.com)

        For Windows, added calls to get the default config, realms and
        ccache files out of a windows ini file.
        * ccdefname.c: does this for the credential cache.
        * osconfig.c: does this for the config and realms files.
	* get_krbh.c, realm_do.c, hst_real.c, def_real.c: added calls to
           set the default values.

Tue Mar 28 18:35:20 1995  John Gilmore  (gnu at toad.com)

	* DNR.c:  Add Apple MacTCP source file for domain name resolution.
	* macsock.c:  Add fake socket support routines for MacTCP.
	* Makefile.in (OBJS, SRCS):  Add DNR and macsock.
	* ccdefname.c:  On Mac, default cred cache is "STDIO:krb5cc" for now.
	FIXME, this needs to find the Preferences folder and use that.
	FIXME, shouldn't be conditioned on HAVE_MACSOCK_H.
	* gmt_mktime.c:  Use HAVE_SYS_TYPES_H.
	* krbfileio.c:  Remove <sys/types.h>.
	* localaddr.c, sendto_kdc.c:  Convert to more generic socket
	support.  Use closesocket instead of close, SOCKET_ERRNO rather
	than errno, SOCKET rather than int, etc.
	* localaddr.c:  Use getmyipaddr() from macsock.c, if on Mac.
	Add FIXME for multiple local addresses.